--- a/Adarsh/template/req.html
+++ b/Adarsh/template/req.html
@@ -432,7 +432,7 @@
 
                 <a>
                 <h7>Join us on Telegram to get more amazing movies like this:</h7>
-                <center><a href="https://telegram.me/apzentertainmentbackup" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
+                <center><a href="https://telegram.me/apz_official" class="tg-btn" style="font-family: Arial, sans-serif; font-size: 16px; font-weight: bold; text-decoration: none; color: #FFFFFF; background-color: green; padding: 10px 20px; border-radius: 5px; border: none;">
                  Join my update channel
                 <br />
                       </a></center>
@@ -447,7 +447,7 @@
                 This website does not provide a storage/dissemination function.
                 You can report the video that contains a problem like copyright,
                 porn, violence, etc,                 <a
-                  href="https://telegram.me/apzentertainmentbackup"
+                  href="https://telegram.me/apz_official"
                   style="color: darkorange"
                 >
                   <b>Report</b>
